Quick navbar change to fix input breaking on IE

--- a/public/app/components/navbar/navbar.scss
+++ b/public/app/components/navbar/navbar.scss
@@ -2,7 +2,7 @@
 
     md-autocomplete-wrap {
         background: #0269a6;
-        display: block;
+       
     }
 
     md-autocomplete input{
